package com.example;

public interface Promotion {
    void apply(Cart cart);
}
